packages/portfolio-site/main/default/objects/Project__c/fields/Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Business_Value__c</fullName>
    <label>Business Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>