packages/portfolio-site/main/default/objects/Project__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>Used for timeline sorting and resume project section</description>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>