packages/portfolio-site/main/default/objects/Project__c/fields/Hero_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Hero_Image_URL__c</fullName>
    <description>Main card image shown on landing page grid and 5-Minute Tour</description>
    <label>Hero Image URL</label>
    <type>Url</type>
</CustomField>