packages/portfolio-site/main/default/objects/Project__c/fields/Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>Is_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, project appears in the curated 5-Minute Tour hero section</description>
    <label>Is Featured</label>
    <type>Checkbox</type>
</CustomField>