packages/portfolio-site/main/default/objects/Project__c/fields/Live_URL__c.field-meta.xml
<CustomField>
    <fullName>Live_URL__c</fullName>
    <description>Public link to the deployed solution (if applicable)</description>
    <label>Live URL</label>
    <type>Url</type>
</CustomField>