packages/portfolio-site/main/default/objects/Project__c/fields/Pillar_Label__c.field-meta.xml
<CustomField>
    <fullName>Pillar_Label__c</fullName>
    <formula>CASE(Pillar__c,
    &quot;A&quot;, &quot;Pillar A: Business Architecture&quot;,
    &quot;B&quot;, &quot;Pillar B: Pre-Sales Consultancy&quot;,
    &quot;C&quot;, &quot;Pillar C: Integration &amp; API-Led&quot;,
    &quot;D&quot;, &quot;Pillar D: AI &amp; Agentforce&quot;,
    &quot;E&quot;, &quot;Pillar E: DevOps &amp; Automation&quot;,
    &quot;Unassigned&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pillar Label</label>
    <type>Text</type>
</CustomField>