packages/portfolio-site/main/default/objects/Project__c/fields/Repository_URL__c.field-meta.xml
<CustomField>
    <fullName>Repository_URL__c</fullName>
    <description>GitHub (or other) source code link for this project</description>
    <label>Repository URL</label>
    <type>Url</type>
</CustomField>