packages/portfolio-site/main/default/objects/Project__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Lower = appears earlier. Used for both full grid and featured projects</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>