packages/portfolio-site/main/default/objects/Project__c/fields/Year_Completed__c.field-meta.xml
<CustomField>
    <fullName>Year_Completed__c</fullName>
    <description>Formula from Date_Completed__c. Displayed on resume</description>
    <formula>TEXT(YEAR(Date_Completed__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Completed</label>
    <type>Text</type>
</CustomField>